--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-dc-js",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "🚀 Multi-dimensional charting based on dc.js for React",
   "main": "dist/react-dc.commonjs.js",
   "module": "dist/es/index.js",
   "jsnext:main": "dist/es/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent",
     "build": "npm run build:umd && npm run build:es",
     "build:umd": "NODE_ENV=production webpack -p",
     "build:es": "BABEL_ENV=module babel src -d dist/es",
@@ -45,7 +45,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@testing-library/react": "^10.0.6",
+    "@testing-library/react": "^10.2.1",
     "@testing-library/react-hooks": "^3.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -72,6 +72,10 @@
     "webpack-cli": "^3.3.11"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src(.*)$": "<rootDir>/src/$1",
+      "crossfilter": "<rootDir>/node_modules/crossfilter2"
+    },
     "moduleFileExtensions": [
       "jsx",
       "js"
