--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "lint": "eslint src",
     "prepublish": "npm run flow && npm run lint && npm run build && npm run test"
   },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "author": "Pedro Lourenço <pedro@pedrolourenco.net>",
   "license": "Apache-2.0",
   "repository": {
