--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:es": "BABEL_ENV=module babel src -d dist/es",
     "flow": "flow",
     "lint": "eslint src",
-    "prepublish": "npm run flow && npm run lint && npm run build && npm run test"
+    "prepare": "npm run flow && npm run lint && npm run build && npm run test"
   },
   "files": [
     "dist",
