--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npm run build:umd && npm run build:es",
     "build:umd": "NODE_ENV=production webpack -p",
     "build:es": "BABEL_ENV=module babel src -d dist/es",
+    "build:watch": "npm run build:es -- --watch",
     "flow": "flow",
     "lint": "eslint src",
     "prepare": "npm run flow && npm run lint && npm run build && npm run test"
