--- a/.eslintrc
+++ b/.eslintrc
@@ -6,20 +6,23 @@
     "react-hooks/exhaustive-deps": "warn",
     "prettier/prettier": "error",
     "import/no-cycle": "error",
-    "import/order": ["error", {
-      "groups": ["builtin", "external", "internal"],
-      "pathGroups": [
-        {
-          "pattern": "react",
-          "group": "external",
-          "position": "before"
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal"],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react"],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
         }
-      ],
-      "pathGroupsExcludedImportTypes": ["react"],
-      "alphabetize": {
-        "order": "asc",
-        "caseInsensitive": true
       }
-    }]
+    ]
   }
 }
