--- a/.babelrc
+++ b/.babelrc
@@ -6,8 +6,7 @@
         "modules": false
       }
     ],
-    "@babel/preset-react",
-    "@babel/preset-flow"
+    "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
