--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "d3": "^6.3.1",
     "eslint": "6.8.0",
     "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
