--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "build:umd": "NODE_ENV=production webpack -p",
     "build:es": "BABEL_ENV=module babel src -d dist/es",
     "build:watch": "npm run build:es -- --watch",
-    "flow": "flow",
     "lint": "eslint src",
-    "prepare": "npm run flow && npm run lint && npm run build && npm run test"
+    "prepare": "npm run lint && npm run build && npm run test"
   },
   "files": [
     "dist",
     "LICENSE",
     "README.md"
   ],
-  "author": "Pedro Lourenço <pedro@pedrolourenco.net>",
+  "author": "Pedro Lourenço <pedro@plourenco.com>",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -49,7 +48,6 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
-    "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@testing-library/react": "^11.2.3",
     "@testing-library/react-hooks": "^5.1.2",
@@ -59,13 +57,12 @@
     "d3": "^6.3.1",
     "eslint": "6.8.0",
     "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "4.7.0",
+    "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "2.5.1",
-    "flow-bin": "^0.135.0",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
