--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.2.0-beta",
   "description": "🚀 Multi-dimensional charting based on dc.js for React",
   "main": "dist/react-dc.umd.js",
-  "module": "dist/es/index.js",
-  "jsnext:main": "dist/es/index.js",
+  "module": "dist/react-dc.module.js",
+  "jsnext:main": "dist/react-dc.module.js",
   "scripts": {
     "test": "jest --silent",
-    "build": "npm run build:umd && npm run build:es",
-    "build:umd": "NODE_ENV=production webpack -p",
-    "build:es": "BABEL_ENV=module babel src -d dist/es",
-    "build:watch": "npm run build:es -- --watch",
+    "build": "webpack -p",
     "lint": "eslint src",
     "prepare": "npm run lint && npm run build && npm run test"
   },
@@ -52,7 +49,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/react-hooks": "^5.1.2",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.3",
     "css-loader": "^5.2.4",
     "d3": "^6.3.1",
     "eslint": "6.8.0",
@@ -71,7 +68,7 @@
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^2.0.0",
-    "webpack": "^4.43.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^3.3.11"
   },
   "jest": {
