--- a/playground/package.json
+++ b/playground/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^5.6.4",
+    "@craco/craco": "^5.9.0",
     "crossfilter2": "^1.5.2",
     "d3": "^5.16.0",
     "react": "^16.8.0",
+    "react-dc-js": "file:..",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
