--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,4 @@ jobs:
     - run: npm ci
     - run: npm run lint
     - run: npm test
-    - run: npm run build
+    - run: NODE_ENV=production npm run build
